# KokoroMemo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  README.md  config.example.yaml  docker-compose.file.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.dsuperpowers/sdd/: task-8-report.md
.github/workflows/: docker-build.yml
app/: main.py
app/api/: routes_admin.py  routes_openai.py
app/core/: config.py  services.py
app/memory/: card_extractor.py  card_retriever.py
app/storage/: __init__.py  database.py  models.py  rebuild_v2.py  repository.py  vector_base.py  vector_lancedb.py  vector_pgvector.py  vector_sync.py
app/storage/migrations/: alembic.ini  env.py
app/storage/migrations/versions/: 001_initial.py
docs/superpowers/plans/: 2026-07-04-docker-migration-plan.md
docs/superpowers/specs/: 2026-07-04-docker-migration-design.md
gui/: package-lock.json
gui/src/: App.vue  api.ts
gui/src/i18n/en-US/: settings.ts
gui/src/i18n/zh-CN/: settings.ts
gui/src/views/: Settings.vue
