[project]
name = "kokoromemo"
version = "0.8.1"
description = "Local long-term memory proxy for AI role-playing applications"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "numpy>=1.24",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
full = [
    "lancedb>=0.17",
    "pyarrow>=17",
    "uvloop>=0.19; sys_platform != 'win32'",
    "httptools>=0.6",
    "asyncpg>=0.29",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
